- only refresh feedlist if &op=getConfig returns a new number of feeds
- Update unread-counts on startup (needs API method for getCounters on Tiny Tiny RSS)
- Lots of work todo on performance


0.5.0
- Added local caching in DB for Articles, Feeds and Categories.
- HTML content is saved base64-encoded in DB to avoid syntax-problems while inserting
- Removed Tabs, they were unneccessary since we have uncategorized feeds as a virtual category now
- Added preference for "automatically open url for empty article".
- Added preference for "automatically load data of categories below the current level".

0.4.0
- Mark everything as read button
- Share Article-URL via Twitter, Mail...
- Zoom-Button for Articles

0.3.0
- Next/previous-Button in Article-View Options-menu
- Use Swipe for Previous/Next Article
- Preference for "Use Swipe", default on
- Swipe only in bottom area of the Article-View, display hint if swiping elsewhere
- Added support for virtual-category "uncategorized Feeds" (categoryId=0)
- Added Tab on Main-Screen for uncategorized Feeds
- Added Option "DisplayOnlyUnread" to hide read articles and feeds without unread articles
- Added Option "DisplayOnlyUnread" to Options-Menü
- Added Option "Toggle Display Unread" to Main-Menu, FeedList-Menu and FeedHeadlineList-Menu
- Show attached images
- Automatically open webpage for empty Feed-Entrys
- Automatically leave FeedHeadlineView if there are no items (see FeedHeadlineListActivity.java:207)
- Disabled concurrent modifications in Refresher.java and Updater.java because of Exceptions (see comments in source)

0.2.0:
- Switch to new TTRSS JSON-based API; XML-RPC is no longer supported (need TTRSS >= 1.4.0);
- Articles can be marked as read when openning them (can be disabled);
- Virtual feeds can be hide or shown;
- Lazy vs. full refresh preference (lazy mode can have unread count error);

0.1.0:
- Initial release;
- Read categories, feeds, feeds headlines and articles;
- Manual read/unread state;